[gd_scene load_steps=6 format=3 uid="uid://b6hvbgum0ulus"]

[ext_resource type="Script" path="res://Scripts/Menus/DressingRoom.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/UI/AudioButton.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bk533dn68qoo1" path="res://Art/QuestionMarkSkin.png" id="3"]
[ext_resource type="FontFile" uid="uid://bjoqkciqay5qm" path="res://Art/Fonts/squarewave/Squarewave-Bold.ttf" id="4"]

[sub_resource type="StyleBoxEmpty" id="1"]

[node name="DressingRoom" type="MarginContainer"]
offset_right = 500.0
offset_bottom = 300.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_right = -150
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("1")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 119.0
offset_right = 281.0
offset_bottom = 46.0
grow_horizontal = 2
text = "Select Skin:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 27.0
offset_top = 36.0
offset_right = 346.0
offset_bottom = 196.0
theme_override_constants/separation = 50
alignment = 1

[node name="LeftButtonsVBox" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="Left" type="Button" parent="Panel/HBoxContainer/LeftButtonsVBox"]
layout_mode = 2
text = "<"
script = ExtResource("2")

[node name="LeftSkinOverlay" type="Button" parent="Panel/HBoxContainer/LeftButtonsVBox"]
layout_mode = 2
text = "<"
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="Character" type="TextureRect" parent="Panel/HBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3")
expand_mode = 3

[node name="OverlaySelectPortrait" type="TextureRect" parent="Panel/HBoxContainer/MarginContainer"]
layout_mode = 2
expand_mode = 3

[node name="RightButtonsVBox" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="Right" type="Button" parent="Panel/HBoxContainer/RightButtonsVBox"]
layout_mode = 2
text = ">"
script = ExtResource("2")

[node name="RightSkinOverlay" type="Button" parent="Panel/HBoxContainer/RightButtonsVBox"]
layout_mode = 2
text = ">"
script = ExtResource("2")

[node name="Name" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 27.0
offset_top = 196.0
offset_right = 364.0
offset_bottom = 318.0
theme_override_fonts/font = ExtResource("4")
text = "Default"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Description" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 230.0
offset_right = 376.0
offset_bottom = 336.0
text = "Don't run with scissors, oh wait you did"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Equip" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 131.0
offset_top = 231.0
offset_right = 245.0
offset_bottom = 302.0
text = "Equip"

[connection signal="pressed" from="Panel/HBoxContainer/LeftButtonsVBox/Left" to="." method="_on_left_pressed" flags=18]
[connection signal="pressed" from="Panel/HBoxContainer/LeftButtonsVBox/LeftSkinOverlay" to="." method="_on_left_skin_overlay_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/RightButtonsVBox/Right" to="." method="_on_right_pressed" flags=18]
[connection signal="pressed" from="Panel/HBoxContainer/RightButtonsVBox/RightSkinOverlay" to="." method="_on_right_skin_overlay_pressed"]
